client/src/styles/Home.scss
@import 'variables.scss';

.hero-container {
  img {
    height: 90vh;
    width: 60vw;
    object-fit: cover;
    // object-position: 10vw
    max-width: 500px;
  }
}

.home-container {
  display: flex;
  flex-direction: row;
}

.home-body {
  padding: 10em 0 0 5em;

  input {
    border: 1px dashed $black;
    margin: 0.8em;
    padding: 1em;
  }

}

.home-msg {
  font-size: 1.8em;
  margin-bottom: 1em;
  line-height: 1em;
  font-weight: 200;
  max-width: 400px;

  strong {
    font-family: $logo-font;
    font-size: 2em;
  }

  b {
    font-family: $logo-font;
  }
}


/* CSS */
.button {
  font-family: $primary-font;
  text-transform: uppercase;
  position: relative;
  overflow: hidden;
  border: 1px solid $white;
  color: $white;
  display: inline-block;
  font-size: 15px;
  line-height: 15px;
  padding: 18px 18px 17px;
  text-decoration: none;
  cursor: pointer;
  background: $black;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.button span:first-child {
  position: relative;
  transition: color 600ms cubic-bezier(0.48, 0, 0.12, 1);
  z-index: 10;
}

.button span:last-child {
  color: $black;
  display: block;
  position: absolute;
  bottom: 0;
  transition: all 500ms cubic-bezier(0.48, 0, 0.12, 1);
  z-index: 100;
  opacity: 0;
  top: 65%;
  left: 50%;
  transform: translateY(225%) translateX(-50%);
  height: 14px;
  line-height: 13px;
}


.button:after {
  border: 1px solid black;
  content: "";
  position: absolute;
  bottom: -50%;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: $white;
  transform-origin: bottom center;
  transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
  transform: skewY(9.3deg) scaleY(0);
  z-index: 50;
}

.button:hover:after {
  transform-origin: bottom center;
  transform: skewY(9.3deg) scaleY(2);
}

.button:hover span:last-child {
  transform: translateX(-50%) translateY(-100%);
  opacity: 1;
  transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
}

/* Mobile and smaller devices only styles */
@media only screen and (max-width: 700px) {
  .home-container {
    flex-direction: column;
  }

  .hero-container {

    img {
      height: 40vh;
      width: 100%;
      object-fit: cover;
      // object-position: 10vw
    }
  }

  .home-body {
    padding: 4em 0 0 0;
  }

  .home-msg {
    font-size: 2.5em;

    strong {
      font-family: $logo-font;
      font-size: 1.5em;
    }
  }

}

@media only screen and (max-width: 400px) {
  input {
    width: 200px
  }

}

